--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h2>I'm a web developer</h2>
         <p> &nbsp; And here my works</p> <hr/>
     <h3><a href="./public/movie-ranking.html">Movie ranking Project</a></h3>
-    <img src="/asstes/movie ranking.png" height="200"/>
+    <img src="../4.3 HTML Porfolio Project/assets/images/movie ranking.png" height="200"/>
     <h3><a href="./public/birthday-invite.html">Birthday Invite Project</a></h3>
     <img src="../4.3 HTML Porfolio Project/assets/images/Birthday invite.png" height="200"/>
     <hr/>
